Update and rename loginpagetechnohacks.html to index.html

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <title>
             venky
         </title>
-        <link rel="stylesheet" type="text/css" href="cssTask6.css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
 </html>
 <body>
 <form action="action_page.php" method="post">
     <div class="imgcontainer">
-      <img src="avataar1.jpg" alt="Avatar" class="avatar">
+      <img src="asset/avataar1.jpg" alt="Avatar" class="avatar">
     </div>
   
     <div class="container">
